# workspace

agents/: .replit  README.md  app.log.1  app.log.2  app.log.3  auth.py  config.py  llm_interface.py  logging_config.py  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  task_scheduler.py
agents/agentic/: agent.py  crew.py  task.py
agents/chains/: __init__.py  chain.py  context_aware_workflow.py
agents/static/: styles.css
agents/templates/: agents.html  base.html  chains.html  crews.html  home.html  login.html  register.html  tasks.html  workflows.html
instance/: app.db
